plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'tragsatec'
version = '1.0.0-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'com.auth0:java-jwt:4.3.0'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.ldap:spring-ldap-core'
	implementation 'org.springframework.security:spring-security-ldap'
	implementation 'com.unboundid:unboundid-ldapsdk'

	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.apache.commons:commons-math3:3.6.1'

	implementation("com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5")

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


//    implementation 'org.apache.poi:poi:5.2.3'
//    implementation 'org.apache.poi:poi-ooxml:5.4.0'
    implementation("org.apache.poi:poi:5.4.1")
    implementation("org.apache.poi:poi-ooxml:5.4.1")
    implementation("org.apache.xmlgraphics:batik-transcoder:1.18")
    implementation("org.apache.xmlgraphics:batik-codec:1.18")
    implementation("org.jfree:jfreechart:1.5.6")

    implementation 'org.docx4j:docx4j-JAXB-ReferenceImpl:8.3.10'
    implementation 'org.docx4j:docx4j-export-fo:8.3.10'

    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
//    implementation 'org.docx4j:docx4j-export-fo:8.3.10'
}

tasks.named('test') {
	useJUnitPlatform()
}
